# C-JIT

./: CMakeLists.txt  Lex.g4  Par.g4  README.md  command  main  main.c  main.cpp
FileSystem/: FS.c  FS.h
Lexer/: Lexer.c  Lexer.cpp  Lexer.h
Test/: RunAllTests.cpp  RunAllTests.h  Test.c  Test.h
Test/Token/Normal/: TestNormalTokens.cpp  TestNormalTokens.h
Test/Token/Spec/: TestSpecTokens.cpp  TestSpecTokens.h
Token/: Token.c  Token.h
Token/defs/: TokenKinds.def
Tokens/: Spec.cpp  Token.cpp
filesystem/: fs.c  fs.h
include/Compiler/: Lexer.h  Token.h
lexer/: lexer.c  lexer.cpp  lexer.h  main.cpp  token.cpp
new/: main.c
new/clang/: lex  main.c
new/clang/Token/: TokenKinds.c  TokenKinds.h
old/: main.c
old/LLVM-Lexer/: main.cpp
old/LLVM-Lexer/llvm/AbstractDataTypes/: ArrayRef.h  BitVector.h  DenseMapInfo.h  Hashing.h  STLExtras.h  STLFunctionalExtras.h  SmallString.h  SmallVector.h  StringRef.h  StringSwitch.h  Twine.h  bit.h  iterator.h  iterator_range.h
old/LLVM-Lexer/llvm/Config/: abi-breaking.h.cmake  llvm-config.h
old/LLVM-Lexer/llvm/Support/: Chrono.h  Compiler.h  DataTypes.h  Endian.h  Error.h  ErrorHandling.cpp  ErrorHandling.h  ErrorOr.h  FileSystem.h  Format.h  FormatProviders.h  FormatVariadicDetails.h  MD5.h  MathExtras.h  NativeFormatting.h  Process.h  Program.h  Signals.h  SwapByteOrder.h  Threading.h  raw_ostream.h  type_traits.h
old/LLVM-Lexer/llvm/Support/FileSystem/: UniqueID.h
old/LLVM-Lexer/token/: TokenKinds.cpp  TokenKinds.def  TokenKinds.h
old/filesystem/: fs.c
old/small-llvm/: TokenKinds.cpp  TokenKinds.def  TokenKinds.h  main.cpp  small_llvm_example
old/test/lexer/: lexer.c
old/test/token/: test_token.c
src/Lexer/: Lexer.cpp  Token.cpp
test/: LexerTest.cpp
test/lexer/: lexer.h
test/token/: test_token.h
token/: token.c  token.h
